# latinsq

./: .gitignore  INSTRUCTIONS.md  baseline.py  experiment.py  main.py  model.py  package-lock.json  package.json  participation_analysis.py  pyproject.toml  square.py
runs/active_quarter_256upd/: WRITEUP.md  curve_k128_p10000000_max.csv  curve_k128_p10000000_min.csv  curve_k128_p1000000_max.csv  curve_k128_p1000000_min.csv  curve_k16_p10000000_max.csv  curve_k16_p10000000_min.csv  curve_k16_p1000000_max.csv  curve_k16_p1000000_min.csv  curve_k64_p10000000_max.csv  curve_k64_p10000000_min.csv  curve_k64_p1000000_max.csv  curve_k64_p1000000_min.csv  result_k128_p10000000_max.json  result_k128_p10000000_min.json  result_k128_p1000000_max.json  result_k128_p1000000_min.json  result_k16_p10000000_max.json  result_k16_p10000000_min.json  result_k16_p1000000_max.json  result_k16_p1000000_min.json  result_k64_p10000000_max.json  result_k64_p10000000_min.json  result_k64_p1000000_max.json  result_k64_p1000000_min.json  summary.csv  summary.json  training_curves_all.html  validation_loss_vs_k.html
runs/active_quarter_256upd_equal_tokens/: WRITEUP.md  curve_k128_p10000000_max.csv  curve_k128_p10000000_min.csv  curve_k128_p1000000_max.csv  curve_k128_p1000000_min.csv  curve_k16_p10000000_max.csv  curve_k16_p10000000_min.csv  curve_k16_p1000000_max.csv  curve_k16_p1000000_min.csv  curve_k64_p10000000_max.csv  curve_k64_p10000000_min.csv  curve_k64_p1000000_max.csv  curve_k64_p1000000_min.csv  result_k128_p10000000_max.json  result_k128_p10000000_min.json  result_k16_p1000000_max.json  (+13 more)
(+220 files in other folders)
